1.0-devel
======================

 * Fixed bug [ 1154073 ] criterion_edit_form.cpt(.metadata) has no default
   action. The default action for the criterion edit form is save.
   [tiran]

 * Added portal_atct tool. The new tool will be used for the new topic features
   and for the plone control panel.
   [tiran]

 * Interface geddon: Merged all interfaces into a single file
   [tiran]

 * Merged limi's ui branch which adds a text field to ATEvent and an image plus
   image caption to ATNewsItem.
   [limi, tiran]

 * Added related items reference field to all types using Danny's reference
   browser widget. The ATReferenceBrowserWidget has to be available.
   http://svn.plone.org/archetypes/MoreFieldsAndWidgets/ATReferenceBrowserWidget
   [tiran]

 * Removed old debian/ directory. I don't maintain it any more so there is no
   reason in having it in the cvs
   [tiran]

 * Removed QuotaSupport.py. It should never be in the official tree of ATCT
   [tiran]

 * Introduced great chances in the migration system: The portal type names of
   the ATCT types are the same as the CMF types. CMF types will be renamed at
   install time.
   [tiran]

 * Introduced ZConfig based configuration. It will replace the customconfig.py
   file.
   [tiran]

0.2.0-rc5 - 2005-02-26
======================

 * Updated requirements to Zope 2.7.4+, Python 2.3.4+ and AT 1.3.2-rc1+
   [tiran]

 * Cleaned up the migration suite a little bit and enhanced the doc strings.
   [tiran]
   
 * Replaces the globalAllow hack by createTypeByName which doesn't make
   security checks like "is the type implicitly or explicitly addable in the
   folder". It shares the same codebase as the function from PloneUtilities
   I once wrote to unfuck the create member area method.
   [tiran]
   
 * Better traceback support inside the migration suite.
   [tiran]
   
 * Added knob to toggle the installation of LinguaPlone in ATCT install.
   [tiran]
   
 * Added explicit portal type name to all ATCT types.
   [tiran]